# soloquest

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL_JUST.md  ISSUE_CREATION_SUMMARY.md  MIGRATION_NOTES.md  Makefile  README.md  justfile  pyproject.toml  test_automation.py
.claude/: settings.local.json
.claude/worktrees/sharp-panini/: .gitignore  AUTOMATED_TESTING_COMPLETE.md  AUTOMATED_TEST_RESULTS.md  CHANGELOG.md  Makefile  PLAYTEST_GUIDE.md  PLAYTEST_RESULTS.md  README.md  pyproject.toml  test_automation.py
.claude/worktrees/sharp-panini/docs/: adventures-directory.md  getting-started.md  starforged-cli-spec.md
.claude/worktrees/sharp-panini/starforged/: config.py  main.py
.claude/worktrees/sharp-panini/starforged/commands/: character.py  move.py  oracle.py  roll.py  vow.py
.claude/worktrees/sharp-panini/starforged/engine/: dice.py  moves.py
.claude/worktrees/sharp-panini/starforged/journal/: exporter.py
.claude/worktrees/sharp-panini/starforged/state/: save.py
.claude/worktrees/sharp-panini/tests/: test_character.py  test_dice.py  test_exporter.py  test_moves.py  test_roll.py  test_save.py  test_session.py  test_vow.py
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: web-enabling-brainstorm.md
.github/workflows/: copilot-setup-steps.yml  pr-checks.yml  release.yml
docs/: README.md  adventures-directory.md  getting-started.md
docs/adr/: 001-repo-workflow-and-conventions.md  002-ui-panel-guidelines.md  003-color-system-and-theming.md  README.md
docs/archive/: DOCUMENTATION_RESTRUCTURE_PLAN.md  PLAN_2026-02-14.md  PROJECT_STATUS_2026-02-14.md  README.md  RESTRUCTURE_SUMMARY.md
docs/development/: contributing.md  lookup-candidates.md  project-status.md  setup.md  web-enabling-issue.md
docs/specifications/: PROCESS.md  README.md  architecture.md  choose-your-truths-plan.md  spec.md
docs/user-guide/: adventures-directory.md  getting-started.md
soloquest/: __init__.py  config.py  loop.py  main.py
soloquest/commands/: asset.py  campaign.py  character.py  completion.py  debility.py  guide.py  guided_mode.py  interpret.py  move.py  new_character.py  oracle.py  registry.py  roll.py  session.py  truths.py  vow.py  wizard_oracle.py
soloquest/data/: character_creation.toml  commands.toml  guide.toml  moves.toml  oracles.toml  strings.toml
soloquest/engine/: assets.py  dice.py  momentum.py  oracles.py  truths.py
soloquest/journal/: __init__.py  exporter.py
soloquest/models/: asset.py  campaign.py  character.py  session.py  truths.py  vow.py
soloquest/state/: campaign.py  save.py  truths_md.py
soloquest/sync/: __init__.py  file_log.py  local.py  port.py
soloquest/ui/: __init__.py  console.py  display.py  strings.py  theme.py
starforged/: loop.py  main.py
starforged/commands/: debility.py  move.py  oracle.py  registry.py  session.py  vow.py
starforged/data/: moves.toml
starforged/journal/: exporter.py
starforged/models/: character.py  vow.py
starforged/state/: save.py
starforged/ui/: display.py
tests/: test_asset_commands.py  test_asset_display.py  test_asset_integration.py  test_assets.py  test_campaign.py  test_character.py  test_character_commands.py  test_character_creation.py  test_character_md.py  test_completion.py  test_completion_commands.py  test_dataforged_loading.py  test_dice.py  test_exporter.py  test_fuzzy_matching.py  test_guide_command.py  test_guided_mode.py  test_history.py  test_integration.py  test_interpret.py  test_journal_markdown.py  test_move_action_roll_logging.py  test_move_category_filter.py  test_move_commands.py  test_moves.py  test_new_character.py  test_oneshot.py  test_oracle_display.py  test_oracle_display_data.py  test_oracles.py  test_partner_activity.py  test_recent_log.py  test_registry.py  test_roll.py  test_save.py  test_session.py  test_session_commands.py  test_shared_vows.py  test_startup.py  test_strings.py  (+8 more)
tests/engine/: test_momentum.py  test_truths_loader.py
tests/models/: test_asset_model.py  test_truths.py
wyrd/: __init__.py  config.py  loop.py  main.py
wyrd/commands/: asset.py  campaign.py  vow.py  (+13 more)
(+36 files in other folders)
