[project]
name = "soloquest"
version = "0.1.0"
description = "A solo journaling CLI for tabletop RPGs (Ironsworn: Starforged, Mythic GME, and more)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
soloquest = "soloquest.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["soloquest"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=soloquest --cov-report=term-missing -v"

[tool.coverage.run]
source = ["soloquest"]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["soloquest"]
