[project]
name = "wyrd"
version = "2.34.0"
description = "A solo journaling CLI for tabletop RPGs (Ironsworn: Starforged, Mythic GME, and more)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
wyrd = "wyrd.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "python-semantic-release>=9.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["wyrd"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=wyrd --cov-report=term-missing -v"

[tool.coverage.run]
source = ["wyrd"]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["wyrd"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "uv build"
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = [
  "^chore:",
  "^ci:",
  "^docs(?:\\(.*\\))?:",
  "^style:",
  "^test:",
  "^build\\(deps\\):",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "ci", "test", "build", "style"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]
